# kiro-v3-optimizations

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  security.yml
benchmarks/: compare.py  profile_components.py  test_benchmarks.py
config/: development.env  production.env  staging.env
docs/: index.md
docs/architecture/: overview.md
docs/runbooks/: backup_restore.py  disaster_recovery.py  incident_response.py
engine/: gc_tuner.py  metrics.py  retry.py
engine/actor/: __init__.py  mailbox.py  pool.py  router.py  supervisor.py  system.py
engine/cache/: precognition.py
engine/cuda/: kernels.py
engine/gpu/: semaphore.py
engine/llm/: timeout.py
engine/strategy/: bandit.py  reward.py
engine/tracing/: __init__.py  otel.py
engine/training/: trainer_daemon.py
examples/: cache_warmup.py  custom_actor.py  full_system.py  gpu_strategy.py
helm/kiro-v3/: Chart.yaml  values.yaml
helm/kiro-v3/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  pvc.yaml  rbac.yaml  secret.yaml  service.yaml  servicemonitor.yaml
k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  pdb.yaml  pvc.yaml  rbac.yaml  secrets.yaml  service.yaml
k8s/overlays/multi-region/: deployment.yaml  kustomization.yaml  resource-patch.yaml  router.yaml
k8s/overlays/production/: kustomization.yaml
k8s/overlays/staging/: kustomization.yaml
monitoring/: grafana-dashboard.json
rust/: Cargo.toml  ffi.py
rust/src/: lib.rs
sdk/python/: kiro_client.py  test_kiro_client.py
sdk/typescript/: kiro-client.ts  package.json  tsconfig.json
terraform/modules/aws/: main.tf
terraform/modules/azure/: main.tf
terraform/modules/gcp/: main.tf
tests/: test_comprehensive.py
tests/chaos/: test_chaos.py
tests/integration/: test_integration.py  test_tracing.py
tests/load/: k6_chaos.js  k6_scenario.js  locustfile.py  run_k6.sh  run_locust.sh
