[package]
name = "kiro-actor-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "kiro_actor"
crate-type = ["cdylib", "staticlib"]

[dependencies]
parking_lot = "0.12"
crossbeam = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true